<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.example.vicky.e_coin.Moneytrans"
android:background="@color/black">
	<de.hdodenhof.circleimageview.CircleImageView
			android:id="@+id/image" android:layout_height="97dp"
			android:layout_width="102dp" android:src="@drawable/person"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="32dp" android:layout_marginLeft="16dp"
			android:layout_marginStart="32dp"
			app:layout_constraintLeft_toLeftOf="parent"/>
	<EditText
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:hint="RECIPIENT UPI_ID"
			android:textColor="@color/red"
			android:textSize="9pt"
			android:textAlignment="center"
			android:background="@drawable/bg_input_gold"
			android:ems="10"
			android:id="@+id/recipient"
			app:layout_constraintStart_toEndOf="@+id/image" android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="84dp"
			app:layout_constraintHorizontal_bias="0.458"/>
	<EditText
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:hint="Enter Amount"
			android:textColor="@color/red"
			android:textSize="9pt"
			android:textAlignment="center"
			android:background="@drawable/bg_input_gold"
			android:ems="10"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent" android:id="@+id/amount" android:layout_marginBottom="24dp"
			app:layout_constraintBottom_toTopOf="@+id/regmobile"/>
	<EditText
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:hint="Registered Number"
			android:textColor="@color/red"
			android:textSize="9pt"
			android:textAlignment="center"
			android:background="@drawable/bg_input_gold"
			android:ems="10"
			android:id="@+id/regmobile" app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"/>
	<Button
			android:text="pay"
			android:onClick="payment"
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:background="@drawable/bg_aqua"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="16dp" app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent" android:id="@+id/pay"/>
</android.support.constraint.ConstraintLayout>
