<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             tools:context="com.example.vicky.e_coin.UpiIdTrans">
	<com.rengwuxian.materialedittext.MaterialEditText android:layout_width="350dp"
	                                                  android:layout_height="wrap_content"

	                                                  android:id="@+id/upitrans"
	                                                  android:hint="UPI_ID"
	                                                  android:inputType="text"
	                                                  app:met_textColorHint="@color/colorAccent"
	                                                  app:met_textColor="@color/colorAccent"
	                                                  app:met_iconPadding="1px"
	                                                  app:met_iconRight="@drawable/ic_upi"
	                                                  app:layout_constraintLeft_toLeftOf="parent"
	                                                  app:layout_constraintRight_toRightOf="parent"
	                                                  app:layout_constraintTop_toTopOf="parent"
	                                                  android:layout_marginTop="44dp"
	                                                  app:layout_constraintHorizontal_bias="0.491"/>
	<com.rengwuxian.materialedittext.MaterialEditText android:layout_width="350dp"
	                                                  android:layout_height="wrap_content"
	                                                  android:hint="Remarks"
	                                                  android:inputType="text"
	                                                  app:met_textColorHint="@color/colorAccent"
	                                                  app:met_textColor="@color/colorAccent"
	                                                  app:met_iconPadding="1px"
	                                                  app:met_iconRight="@drawable/ic_remarks"
	                                                  app:layout_constraintLeft_toLeftOf="parent"
	                                                  app:layout_constraintRight_toRightOf="parent"
	                                                  android:id="@+id/materialEditText" android:layout_marginTop="44dp"
	                                                  app:layout_constraintTop_toBottomOf="@+id/upitrans"
	                                                  app:layout_constraintHorizontal_bias="0.491"/>
	<Button
			android:text="Submit"
			android:layout_width="350dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
			android:id="@+id/upitransonclick"
			android:background="@drawable/bg_aqua"
			app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/materialEditText"
			android:layout_marginTop="36dp"/>
	<Button
			android:text="CANCEL TRANSACTION"
			android:layout_width="350dp"
			android:layout_height="wrap_content"
			android:background="@drawable/bg_asset"
			android:id="@+id/cancel_upi" app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent" android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@+id/upitransonclick"/>
</android.support.constraint.ConstraintLayout>
