...

				<ImageView
						android:src="@drawable/upi_asset"
						android:layout_width="198dp"
						android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
						app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent" android:id="@+id/upiid"
						app:layout_constraintVertical_bias="0.0"
				/>

			</android.support.constraint.ConstraintLayout>
		</android.support.v7.widget.CardView>
		<android.support.v7.widget.CardView
...
			</android.support.constraint.ConstraintLayout>
		</android.support.v7.widget.CardView>
	</GridLayout>
	<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="0dp" android:layout_weight="5"
			android:id="@+id/frame_check_container">
		<TextView
				android:text="👆 Click on a Tile to begin Transaction"
				android:textSize="8pt"
				android:textColor="@color/colorAccent"
				android:textAlignment="center"
				android:layout_width="match_parent"
...
