<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/loginxa"
		tools:context="com.example.vicky.e_coin.Signin">
	<TextView
			android:text="Login"
			android:textColor="@color/logintext"
			android:fontFamily="monospace"
			android:textSize="18pt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
			android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="92dp"
			app:layout_constraintHorizontal_bias="0.323"/>
	<EditText
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:background="@drawable/bg_edittext_focused"
			android:textAlignment="center"
			android:textColor="@color/signuptext"
			android:textSize="10pt"
			android:hint="*e-mail Id"
			android:ems="10"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/mail" android:layout_marginTop="60dp"
			app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginLeft="16dp"/>
	<EditText
			android:background="@drawable/bg_edittext_focused"
			android:textAlignment="center"
			android:textColor="@color/signuptext"
			android:textSize="10pt"
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			android:hint="*Password"
			android:ems="10"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/pass" android:layout_marginTop="32dp"
			app:layout_constraintTop_toBottomOf="@+id/mail" android:layout_marginLeft="16dp"/>
	<Button
			android:text="Login"
			android:onClick="authenticate"
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:background="@drawable/bg_aqua"
			android:id="@+id/Signin"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginBottom="28dp"
			app:layout_constraintBottom_toTopOf="@+id/signup" android:layout_marginLeft="16dp"/>
	<Button
			android:text="Signup"
			android:background="@drawable/bg_pink"
			android:layout_width="270dp"
			android:layout_height="wrap_content"
			android:onClick="signup"
			android:id="@+id/signup"
			android:layout_marginTop="112dp" app:layout_constraintTop_toBottomOf="@+id/pass"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="16dp" android:layout_marginLeft="16dp"/>
</android.support.constraint.ConstraintLayout>
